--- a/index.ipynb
+++ b/index.ipynb
@@ -483,7 +483,7 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    return True if "
+    "    return True if restaurant['rating'] >= "
    ]
   },
   {
